--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,8 @@
     <string name="Updated">Updated successfully</string>
     <string name="Deleted">Deleted successfully</string>
     <string name="Insertcanceled">INSERT CANCELED</string>
+    <string name="cancel">CANCEL</string>
+    <string name="OK">OK</string>
+    <string name="Dialog">Do you want to delete this contact</string>
     <string name="Add">Add</string>
 </resources>
